css/styles.css
/* Main styles */
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&Roboto:300');

/* Variables */

:root {
  --color-win: #78CF82;
  --color-lose: #D94545;
  --color-start: #5b85b7;
  --color-neutral: #445069;
  --color-neutral-light: #D2D2D2;
  --color-keys: #37474F;
  --color-keys-light: #E5E5E5;
  --font-size-large: 60px;
  --font-size-medium: 20px;
  --transition: all .2s ease-in-out;
}

/* main */

* {
  box-sizing: border-box;
}

body {
  justify-content: space-evenly;
  flex-direction: column;
  display: flex;
  height: 100vh;
}

li,
ol,
ul {
  padding: 0;
  display: inline-block;
}

h2 {
  margin: 0;
  text-transform: uppercase;
  font-family: 'Open Sans', sans-serif;
  font-size: var(--font-size-large);
  margin: 0;
}

button {
  margin: 6px;
  border: 1px solid transparent;
  padding: .5rem 1rem;
  color: var(--color-keys);
  font-size: var(--font-size-medium);
  background-color: var(--color-keys-light);
  border-radius: 5px;
  -webkit-transition: var(--transition);
  -o-transition: var(--transition);
  transition: var(--transition);
}

.main-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 100%;
  max-height: 900px;
  text-align: center;
}

.section {
  width: 100%;
  padding: 10px;
}

/* Title */

.header {
  color: var(--color-start);
}

/* Phrase */

.letter {
  font-size: var(--font-size-medium);
  height: 65px;
  width: 65px;
  padding: 20px 1px 0 1px;
  margin-right: 5px;
  margin-bottom:5px;
  color: transparent;
  background: var(--color-neutral-light);
  border-radius: 5px;
}

.space {
  width: 20px;
}

@keyframes skew {
  0% {
    transform: skewX(15deg);
  }

  100% {
    transform: skewX(-15deg);
  }
}

.show {
  color: #FFF;
  font-weight: bold;
  background-color: var(--color-win);

  /* CSS Transition */
  animation: skew 0.2s linear;
  animation-iteration-count: 2;
  animation-direction: alternate;
  transition: var(--transition);
}


/* Keyboard */

.keyrow {
  display: flex;
  justify-content: center;
}

.chosen {
  background: var(--color-neutral);
  border-radius: 5px;
  font-size: var(--font-size-medium);
  color: #FFFFFF;
}

.chosen .wrong {
  background: var(--color-lose);
}

/* button */
.btn__reset {
  margin: 50px auto;
  transition: all 0.15s linear 0s;
  position: relative;
  display: inline-block;
  padding: 15px 25px;
  background-color: #FFE800;
  text-transform: uppercase;
  color: #404040;
  font-family: arial;
  letter-spacing: 1px;
  box-shadow: -6px 6px 0 #404040;
  text-decoration: none;
}

.btn__reset:hover {
  top: 3px;
  left: -3px;
  box-shadow: -3px 3px 0 #404040;
}

.btn__reset:hover::after {
  top: 1px;
  left: -2px;
  width: 4px;
  height: 4px;
}

.btn__reset:hover::before {
  bottom: -2px;
  right: 1px;
  width: 4px;
  height: 4px;
}

.btn__reset ::after {
  transition: all 0.15s linear 0s;
  content: "";
  position: absolute;
  top: 2px;
  left: -4px;
  width: 8px;
  height: 8px;
  background-color: #404040;
  transform: rotate(45deg);
  z-index: -1;
}

.btn__reset::before {
  transition: all 0.15s linear 0s;
  content: "";
  position: absolute;
  bottom: -4px;
  right: 2px;
  width: 8px;
  height: 8px;
  background-color: #404040;
  transform: rotate(45deg);
  z-index: -1;
}

/* Overlay */

#overlay {
  display: flex;
  flex-direction: column;
  position: fixed;
  color: #FFFFFF;
  justify-content: center;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 5px;
}

.title {
  color: #FFF;
}

.start {
  background-color: var(--color-start);
}

.start a {
  color: grey;
  font-weight: bold;
}

.win {
  background-color: var(--color-win);
}

.win a {
  color: var(--color-win);
  font-weight: bold;
}

.lose {
  background-color: var(--color-lose);
}

.lose a {
  color: var(--color-lose);
  font-weight: bold;
}

.statusMessage {
  font-weight: bold;
  font-size: var(--font-size-medium);
}

